--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,12 @@
             <version>4.0.4.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
+
     </dependencies>
 
     <build>
